--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="βoulders™"> 
     <meta name="description" content="Rock climbing platform connecting climbers, routesetters, and gyms.">
-    <meta name="keywords" content="betaboulders, beta boulders, climbing, gym, rock, beta, indoor, app, climb, boulders, bouldering, rock climbing app, indoor rock climbing app, rock climbing">
+    <meta name="keywords" content="betaboulders, beta boulders, climbing, gym, rock, beta, indoor, app, climb, boulders, bouldering, rock climbing app, indoor rock climbing app, rock climbing, climbing competition, climbing comp">
     <meta name="author" content="David Lac">
     <link rel="shortcut icon" href="./beta_icon.ico" type="image/x-icon">
     <link rel="icon" href="./beta_icon.ico" type="image/x-icon">
@@ -32,7 +32,6 @@
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
     <!-- Nav Menu -->
-
     <div class="nav-menu fixed-top bg-nav">
         <div class="container">
             <div class="row">
@@ -62,11 +61,11 @@
     <div class="section-title p-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Share Beta. Track Progress. Build Community.</h2>
-            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">Connect with your gym and get the solution (beta) to bouldering routes plus more!</p>
+            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">Connect with your gym and get the solution (beta) to bouldering routes and more!</p>
             <div>
-            <a href='https://play.google.com/store/apps/details?id=com.betabouldersapp&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="img-fluid" style="height: 60px"/></a>
-            <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a>
-        </div>
+                <a href='https://play.google.com/store/apps/details?id=com.betabouldersapp&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="img-fluid" style="height: 60px"/></a>
+                <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a>
+            </div>
         </div>
      </div>
 
@@ -132,7 +131,7 @@
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows you to quickly track progress and share beta. Use BetaBoulders to check into your climbing gym!</p>
+                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows you to quickly track progress and share beta. For starters, use BetaBoulders to check into your climbing gym!</p>
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
@@ -143,9 +142,8 @@
     </div>
 
     </div>
-    <!-- // end .section -->
 
-    <div class="section light-bg">
+<div class="section">
 <div class="container">
         <div class="container" >
             <div class="row">
@@ -156,14 +154,14 @@
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h3>Scan the <span style="font-weight: 700">βTag™</span> or Area Posters!</h3>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for the solution for climbing solutions. Watch and view beta seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. </p>
+                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for beta. Get it seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. In competition mode, scan to enter your attempts and compete with others with live scoring! </p>
                     </div>
                 </div>
             </div>
 
         </div>
 </div>
-    </div>
+</div>
     <!-- // end .section -->
 
     <div class="section">
@@ -200,7 +198,7 @@
     <!-- // end .section -->
 
 
-    <div class="section light-bg" id="gallery">
+<!--     <div class="section light-bg" id="gallery">
         <div class="container">
             <div class="section-title">
                 <small>GALLERY</small>
@@ -210,24 +208,24 @@
             <div class="img-gallery owl-carousel owl-theme">
                 <img src="images/gallery/1.jpg" alt="image">
                 <img src="images/gallery/2.jpg" alt="image">
-                <img src="images/gallery/3.jpg" alt="image">
-                <img src="images/gallery/4.jpg" alt="image">
+                <img src="images/gallery/3.jpg" alt="image"> -->
+                <!-- <img src="images/gallery/4.jpg" alt="image"> -->
                 <!-- <img src="images/gallery/5.jpg" alt="image"> -->
                 <!-- <img src="images/gallery/6.jpg" alt="image"> -->
-                <img src="images/gallery/7.jpg" alt="image">
-                <img src="images/gallery/8.jpg" alt="image">
+                <!-- <img src="images/gallery/7.jpg" alt="image"> -->
+                <!-- <img src="images/gallery/8.jpg" alt="image"> -->
                 <!-- <img src="images/gallery/9.jpg" alt="image"> -->
-                <img src="images/gallery/10.jpg" alt="image">
+<!--                 <img src="images/gallery/10.jpg" alt="image">
                 <img src="images/gallery/11.jpg" alt="image">
-                <img src="images/gallery/12.jpg" alt="image">
+                <img src="images/gallery/12.jpg" alt="image"> -->
                 <!-- <img src="images/gallery/13.jpg" alt="image"> -->
-                <img src="images/gallery/14.jpg" alt="image">
-            </div>
+                <!-- <img src="images/gallery/14.jpg" alt="image"> -->
+<!--             </div>
         </div>
 
         </div>
 
-    </div>
+    </div> -->
     <!-- // end .section -->
 
     <div class="section pt-0 mt-3">
@@ -242,13 +240,13 @@
                     <h4 class="mb-3">Do I have to have an account to use this app?</h4>
                     <p class="light-font mb-5">Nope! You can access the database, browse climbs, and see beta without an account. We envision this app to be used by both gym members and guests. However, you'll be missing out on a few key features like checking in with your phone and the ability to tick and bookmark climbs to track progress! </p>
                     <h4 class="mb-3">Do I have to download anything?</h4>
-                    <p class="light-font mb-5">BetaBoulders is originally an all web application. You can access it on your browser (phone or desktop) and use all the features. You can also choose to save it to your homepage as our app is a Progressive Web Application. By doing so, it will be treated and act like an app you downloaded. However, iOS and Android apps are coming soon!</p>
+                    <p class="light-font mb-5">BetaBoulders is originally an all web application. You can access it on your browser (phone or desktop) and use all the features. You can also choose to save it to your homepage. However, BetaBoulders is on Google Play and coming soon to iOS App Store.</p>
 
                 </div>
                 <div class="col-md-6">
 
                     <h4 class="mb-3">Isn't this considered cheating? Doesn't this ruin the fun of climbing?</h4>
-                    <p class="light-font mb-5"> At the core, we want climbers to get better by seeing great technique straight from the route setter. We believe that it's good practice if you're able to mimic another person, especially on a route you couldn't otherwise have done on your own. As a climber, try to use it as your last resort or look at beta for a climb you otherwise didn't think you can do! </p>
+                    <p class="light-font mb-5"> At the core, we want climbers to get better by seeing beta shared by others. We believe that it's good practice if you're able to mimic another person, especially on a route you couldn't otherwise have done on your own. As a climber, try to use it as your last resort or look at beta for a climb you otherwise didn't think you can do and train! </p>
 
                 </div>
             </div>
