--- a/gyms.html
+++ b/gyms.html
@@ -93,7 +93,8 @@
             <p class="tagline animated fadeIn wow" data-wow-duration="1.0s" data-wow-delay="1.2s">with easy to scan tags delivering beta videos and <br/>analyzable performance metrics.</p>
             <div>
                 <a href='https://play.google.com/store/apps/details?id=com.betabouldersapp&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="img-fluid" style="height: 60px"/></a>
-                <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a>
+                <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a><br/>
+                <img alt='iOS App Coming Soon' title="iOS App Coming Soon" src='./images/badges/app-apple-coming-soon.png' class="img-fluid" style="height: 50px"/>
             </div>
         </div>
      </div>
