--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">Connect with your gym and get the solution (beta) to bouldering routes and more!</p>
             <div>
                 <a href='https://play.google.com/store/apps/details?id=com.betabouldersapp&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="img-fluid" style="height: 60px"/></a>
-                <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a>
+                <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a><br/>
+                <img alt='iOS App Coming Soon' title="iOS App Coming Soon" src='./images/badges/app-apple-coming-soon.png' class="img-fluid" style="height: 50px"/>
             </div>
         </div>
      </div>
@@ -97,7 +98,7 @@
                                 <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">Team Send!</h4>
-                                    <p class="card-text">Don't wait around for beta. Get video or an annotated image for that crux you're stuck on so you can finish that problem! </p>
+                                    <p class="card-text">Don't wait around for beta. Get video and annotated images for that crux you're stuck on so you can finish that problem! </p>
                                 </div>
                             </div>
                         </div>
@@ -110,7 +111,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Join the community! Tick climbs and track your progress with stats. Share and compare your climbs, progress, and beta with friends! </p>
+                                    <p class="card-text">Join the community! Share and compare your climbs, progress, and beta with friends across gyms! </p>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +126,7 @@
     </div>
     <!-- // end .section -->
     <div class="section">
-<div class="container">
+    <div class="container">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-6">
