--- a/gyms.html
+++ b/gyms.html
@@ -457,9 +457,9 @@
             </div>
           <!-- </div> -->
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/betabouldersapp/"><span class="ti-facebook"></span></a>
-                        <a href="https://twitter.com/betabouldersapp/"><span class="ti-twitter-alt"></span></a>
-                        <a href="https://www.instagram.com/betabouldersapp/"><span class="ti-instagram"></span></a>
+                        <a href="https://www.facebook.com/betabouldersapp/"><span class="ti-facebook text-primary"></span></a>
+                        <a href="https://twitter.com/betabouldersapp/"><span class="ti-twitter-alt text-info"></span></a>
+                        <a href="https://www.instagram.com/betabouldersapp/"><span class="ti-instagram text-danger"></span></a>
                     </div>
                 </div>
             </div>
