--- a/index.html
+++ b/index.html
@@ -148,15 +148,16 @@
 <div class="container">
         <div class="container" >
             <div class="row">
-                <div class="col-md-7 text-center">
-                    <img src="images/dualphone1.png" alt="dual phone" class="img-fluid" id="dual-phone-img">
-                </div>
+
                 <div class="col-md-5 d-flex align-items-center">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h3>Scan the <span style="font-weight: 700">βTag™</span> or Area Posters!</h3>
                         <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for beta. Get it seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. In competition mode, scan to enter your attempts and compete with others with live scoring! </p>
                     </div>
+                </div>
+                <div class="col-md-7 text-center">
+                    <img src="images/dualphone1.png" alt="dual phone" class="img-fluid" id="dual-phone-img">
                 </div>
             </div>
 
@@ -328,9 +329,9 @@
             </div>
           <!-- </div> -->
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/betabouldersapp/"><span class="ti-facebook"></span></a>
-                        <a href="https://twitter.com/betabouldersapp/"><span class="ti-twitter-alt"></span></a>
-                        <a href="https://www.instagram.com/betabouldersapp/"><span class="ti-instagram"></span></a>
+                        <a href="https://www.facebook.com/betabouldersapp/"><span class="ti-facebook text-primary"></span></a>
+                        <a href="https://twitter.com/betabouldersapp/"><span class="ti-twitter-alt text-info"></span></a>
+                        <a href="https://www.instagram.com/betabouldersapp/"><span class="ti-instagram text-danger"></span></a>
                     </div>
                 </div>
             </div>
