--- a/gyms.html
+++ b/gyms.html
@@ -133,7 +133,7 @@
                             <p class="lead">We listened to Gyms: Organization is the problem and our tags are the solution. </p>
                             <p>Attach our dynamic, reusable <strong>βTags™</strong> to routes over and over, and skip the process of reprinting! Use the in app QR Scanner to reset the βTags™! As a minimalist option, use <strong>Area Posters</strong> that you can post away from your routes. 
                             </p>
-                            <p> Climbers can these scan βTags™ to get beta, track progress, and interact with each other. From there, you can gather key metrics from these activities!
+                            <p> Climbers can scan βTags™ to get beta, track progress, and interact with one another. From there, we gather key metrics at your disposal!
                             </p>
                         </div>
                         
@@ -144,7 +144,7 @@
                         <div>
                             <h3>Scan, Tick & Reset</h3>
                             <p class="lead">Our system revolves around the idea of scanning to quickly deliver the goods. </p>
-                            <p> With any QR Scanner, climbers can scan routes they completed to save it to their accounts or to navigate directly to the climb's page where they can checkout the solution and beta along with other route information. Rather than reprinting tags, syms and setters can also use the built in scanner to reassign βTags™ to different routes!
+                            <p> With any QR Scanner, climbers can scan routes they completed to save it or to navigate directly to the climb's page where they can checkout the solution and beta along with other route information. Rather than reprinting tags, syms and setters can also use the built in scanner to reassign βTags™ to different routes!
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
