--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
 <header class="bg-top" id="home" style="background:url(./images/top.png) no-repeat center center fixed; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
-        <div class="img-holder"><img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp wow phone-images" data-wow-duration="1s" data-wow-delay="0s"></div>
+        <div class="img-holder"><img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp phone-images" data-wow-duration="1s" data-wow-delay="0s"></div>
     </header>
 
     <div class="section-title p-3">
