--- a/gyms.html
+++ b/gyms.html
@@ -70,7 +70,7 @@
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#features">FEATURES</a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
+<!--                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li> -->
                                 <li class="nav-item"> <a class="nav-link" href="#guides">GUIDES</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="/" class="btn btn-outline-light ml-lg-3">FOR CLIMBERS</a></li>
