--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#features">FEATURES</a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li>
+<!--                                 <li class="nav-item"> <a class="nav-link" href="#gallery">GALLERY</a> </li> -->
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                                 <li class="nav-item mb-2"><a href="./gyms" class="btn btn-outline-light ml-lg-3">FOR GYMS</a></li>
                                 <li class="nav-item mb-2"><a href="https://main.betabouldersapp.com" class="btn btn-outline-light ml-lg-3" target="_blank">APP</a></li>
