--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <span class="ti-download gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">Accessible by anyone with a browser. Scan the βTag™ or go to the main application to share beta and track progress at participating gyms.</p>
+                                    <p class="card-text">Freely accessible by anyone with a browser. Just Scan the βTag™.</p>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                                 <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">Team Send!</h4>
-                                    <p class="card-text">Don't wait around for beta. Get video and annotated images for that crux you're stuck on so you can finish that problem! </p>
+                                    <p class="card-text">View video and annotated images so you can finish a climb you're stuck on! </p>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Join the community! Share and compare your climbs, progress, and beta with friends across multiple gyms! </p>
+                                    <p class="card-text">Share and compare your climbs, progress, and beta with friends across multiple gyms! </p>
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>The first of its kind.</h2>
-                    <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that allows you to quickly track progress and share beta. For starters, use BetaBoulders to check into your climbing gym!</p>
+                    <p class="mb-4">No other app tailored made for climbers and developed by climbers that allows tracking progress and sharing beta.</p>
                     <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                 </div>
             </div>
@@ -153,7 +153,8 @@
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
                         <h3>Scan the <span style="font-weight: 700">βTag™</span> or Area Posters!</h3>
-                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for beta. Get it seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. In competition mode, scan to enter your attempts and compete with others with live scoring! </p>
+                        <p class="mb-4">Don't waste time aimlessly browsing instagram or youtube for beta. Get it seamlessly by scanning the βTag™ with your phone's camera or NFC tag reader. 
+                            During competitions, scan to enter your attempts and compete with others with live scoring! </p>
                     </div>
                 </div>
                 <div class="col-md-7 text-center">
