--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <span class="ti-user gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">1 App, All Climbing Gyms</h4>
-                                    <p class="card-text">Share and compare your climbs, progress, and beta with friends across multiple gyms! </p>
+                                    <p class="card-text">Share your climbs, progress, and beta with friends across multiple gyms! </p>
                                 </div>
                             </div>
                         </div>
