--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="section-title p-3">
         <div class="container">
             <h2 class="animated fadeIn wow mb-0" data-wow-duration="1.0s" data-wow-delay="1.0s">Share Beta. Track Progress. Build Community.</h2>
-            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">Connect with your gym and get the solution (beta) to bouldering routes and more!</p>
+            <p class="tagline animated fadeIn wow mt-1" data-wow-duration="1.0s" data-wow-delay="1.2s">Connect with your gym and get beta to your climbs and more!</p>
             <div>
                 <a href='https://play.google.com/store/apps/details?id=com.betabouldersapp&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' class="img-fluid" style="height: 60px"/></a>
                 <a href='https://main.betabouldersapp.com/'><img alt='Open App' src='./images/badges/web-badge.png' class="img-fluid" style="height: 40px"/></a><br/>
