--- a/gyms.html
+++ b/gyms.html
@@ -131,9 +131,8 @@
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h3><span style="font-weight: 800">βTags™</span></h3>
                             <p class="lead">We listened to Gyms: Organization is the problem and our tags are the solution. </p>
-                            <p>Attach our dynamic, reusable <strong>βTags™</strong> to routes over and over, and skip the process of reprinting! Use the in app QR Scanner to reset the βTags™! As a minimalist option, use <strong>Area Posters</strong> that you can post away from your routes. 
-                            </p>
-                            <p> Climbers can scan βTags™ to get beta, track progress, and interact with one another. From there, we gather key metrics at your disposal!
+                            <p>Attach our dynamic and reusable <strong>βTags™</strong> to your climbing routes, and skip the process of reprinting by using the in app QR Scanner to reset the βTags™! 
+                                Gyms can also use <strong>Area Posters</strong> linking multiple routes that can be posted away from routes.
                             </p>
                         </div>
                         
@@ -143,8 +142,9 @@
                     <div class="d-flex flex-column flex-md-row">
                         <div>
                             <h3>Scan, Tick & Reset</h3>
-                            <p class="lead">Our system revolves around the idea of scanning to quickly deliver the goods. </p>
-                            <p> With any QR Scanner, climbers can scan routes they completed to save it or to navigate directly to the climb's page where they can checkout the solution and beta along with other route information. Rather than reprinting tags, syms and setters can also use the built in scanner to reassign βTags™ to different routes!
+                            <p class="lead">Our system revolves around the idea of scanning to quickly gather information. </p>
+                            <p> With any QR Scanner, climbers scan routes they completed to save it or to navigate directly to the climb's page where they can checkout the solution and beta along with other route information.
+                                 From there, we gather key metrics and instant feedback for a gym's disposal.
                             </p>
                             <img src="./images/dashboardicon.png" style="width: 180px">
                         </div>
@@ -221,7 +221,7 @@
                     <div>
                         <div class="box-icon"><span class="ti-paint-bucket gradient-fill ti-3x"></span></div>
                         <h3>Focused on Gyms and Beta</h3>
-                        <p class="mb-4">As climbers ourselves, we built an app that prioritizes giving climbers of all levels the means to complete a route and save it. We want to pass on this useful infomation to gyms so that they can be put towards making better climbs and happier climbers.</p>
+                        <p class="mb-4">As climbers ourselves, we wanted to build an app that prioritizes giving climbers of all levels the means to complete a route and save it. We figure that gyms can use this information so that they can be put towards making better climbs and happier climbers.</p>
                         <p>To demo, gyms may contact us for a free sample kit with reusuable tags.</p>
                 </div>
             </div>
@@ -379,7 +379,7 @@
                 </div>
                 <div class="col-md-6">
                     <h4 class="mb-3">Does this app require more work for our setters?</h4>
-                    <p class="light-font mb-5">Beta Boulders is designed to make this approach as easy as possible with reusable tags that saves gyms the trouble of reprinting tags and a quick 10 second add climb process. In fact, versus printing/taping/laminating your own tags, by using Beta Boulders, your routesetters will be saving time.</p>
+                    <p class="light-font mb-5">Beta Boulders is designed to make this approach as easy as possible with reusable tags that saves gyms the trouble of reprinting tags and a quick 10 second add climb process. In fact, versus printing/taping/laminating your own tags, by using Beta Boulders, you will be saving time.</p>
                 </div>
             </div>
         </div>
