--- a/gyms.html
+++ b/gyms.html
@@ -131,8 +131,8 @@
                             <div class="box-icon"><span class="ti-tag gradient-fill ti-3x"></span></div>
                             <h3><span style="font-weight: 800">βTags™</span></h3>
                             <p class="lead">We listened to Gyms: Organization is the problem and our tags are the solution. </p>
-                            <p>Attach our dynamic and reusable <strong>βTags™</strong> to your climbing routes, and skip the process of reprinting by using the in app QR Scanner to reset the βTags™! 
-                                Gyms can also use <strong>Area Posters</strong> linking multiple routes that can be posted away from routes.
+                            <p>Attach our dynamic and reusable <strong>βTags™</strong> to your climbing routes, and skip the process of reprinting by using the in app QR Scanner to reset! 
+                                Gyms can also use <strong>Area Posters</strong> linking multiple routes into one tag.
                             </p>
                         </div>
                         
