--- a/gyms.html
+++ b/gyms.html
@@ -520,9 +520,9 @@ var partJson = {
             "line_linked": {
                 "enable": true,
                 "distance": 300,
-                "color": "#afafaf",
+                "color": "#696969",
                 "opacity": 1,
-                "width": 1
+                "width": 3
             },
             "move": {
                 "enable": true,
