--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
             "line_linked": {
                 "enable": true,
                 "distance": 300,
-                "color": "#afafaf",
+                "color": "#696969",
                 "opacity": 1,
-                "width": 1
+                "width": 3
             },
             "move": {
                 "enable": true,
