--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <span class="ti-download gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">No Downloads</h4>
-                                    <p class="card-text">Freely accessible by anyone with a browser. Just Scan the βTag™.</p>
+                                    <p class="card-text">Freely accessible online. For convenience, scan the βTag™.</p>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                     <div class="col-lg-6 offset-lg-6">
                         <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                         <h2>The first of its kind.</h2>
-                        <p class="mb-4">No other app tailored made for climbers and developed by climbers that allows logging climbs and sharing beta (with images and video!).</p>
+                        <p class="mb-4">There's no other app tailored made for climbers and developed by climbers that easily allows logging climbs and sharing beta (with user submitted images and video!).</p>
                         <a href="https://main.betabouldersapp.com/climbs" class="btn btn-secondary">Check it Out!</a>
                     </div>
                 </div>
