--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <img src="images/bg-color.png" class="position-absolute" style="z-index: 10; width:100%">
+    <img src="images/bg-color.png" class="position-absolute" style="z-index: 10; width:100%; min-height: 150px">
     <header class="" id="home" style="position:relative;">
         <div class="img-holder">
             <img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp phone-images" data-wow-duration="1s" data-wow-delay="0s">
@@ -357,37 +357,37 @@
                     {
                         "src": "./images/holds/red.png",
                         "width": 100,
-                        "height": 140
+                        "height": 110
                     },
                     {
                         "src": "./images/holds/green.png",
                         "width": 100,
-                        "height": 140
+                        "height": 120
                     },
                     {
                         "src": "./images/holds/orange.png",
                         "width": 100,
-                        "height": 160
+                        "height": 100
                     },
                     {
                         "src": "./images/holds/pink.png",
                         "width": 100,
-                        "height": 140
+                        "height": 70
                     },
                     {
                         "src": "./images/holds/purple.png",
                         "width": 100,
-                        "height": 160
+                        "height": 100
                     },
                     {
                         "src": "./images/holds/teal.png",
                         "width": 100,
-                        "height": 140
+                        "height": 100
                     },
                     {
                         "src": "./images/holds/yellow.png",
                         "width": 100,
-                        "height": 150
+                        "height": 90
                     }
                 ]
             },
@@ -405,8 +405,8 @@
                 "enable": true,
                 "distance": 600,
                 "color": "#696969",
-                "opacity": 1,
-                "width": 3
+                "opacity": 0.4,
+                "width": 1
             },
             "move": {
                 "enable": true,
