--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img src="images/bg-color.png" class="position-absolute" style="z-index: 10; width:100%; min-height: 150px">
     <header class="" id="home" style="position:relative;">
         <div class="img-holder">
-            <img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp phone-images" data-wow-duration="1s" data-wow-delay="0s">
+            <img src="images/iphonex.png" alt="phone" class="img-fluid animated fadeInUp phone-images" data-wow-duration="1s" data-wow-delay="0s" style="top: 5vh">
             <div id="particles-js" style="position: absolute; top: 0; width: 100%; height: 100%">
             </div>
         </div>
@@ -322,7 +322,7 @@
             <div class="d-flex flex-nowrap" id="footer-img">
             </div>
         </div>
-        <p class="mb-2"><small>COPYRIGHT © 2019. ALL RIGHTS RESERVED.<br />BETABOULDERSAPP.COM</small></p>
+        <p class="mb-2"><small>COPYRIGHT © 2021. ALL RIGHTS RESERVED.<br />BETABOULDERSAPP.COM</small></p>
     </footer>
     <!-- jQuery and Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -396,7 +396,7 @@
                 "random": false,
                 "anim": {
                     "enable": true,
-                    "speed": 2,
+                    "speed": 10,
                     "size_min": 60,
                     "sync": false
                 }
@@ -410,7 +410,7 @@
             },
             "move": {
                 "enable": true,
-                "speed": 0.4,
+                "speed": 10,
                 "direction": "bottom",
                 "random": true,
                 "straight": false,
