--- a/gyms.html
+++ b/gyms.html
@@ -81,7 +81,7 @@
     <img src="images/bg-color.png" class="position-absolute" style="z-index: 10; width:100%; min-height: 150px">
     <header class="" id="home" style="position:relative;">
         <div class="img-holder">
-            <img src="images/iphonex3.png" alt="phone" class="img-fluid animated fadeInUp phone-images" data-wow-duration="1s" data-wow-delay="0s">
+            <img src="images/iphonex3.png" alt="phone" class="img-fluid animated fadeInUp phone-images" data-wow-duration="1s" data-wow-delay="0s" style="top: 5vh">
             <div id="particles-js" style="position: absolute; top: 0; width: 100%; height: 100%">
             </div>
         </div>
@@ -437,7 +437,7 @@
             <div class="d-flex flex-nowrap" id="footer-img">
             </div>
         </div>
-        <p class="mb-2"><small>COPYRIGHT © 2019. ALL RIGHTS RESERVED.<br />
+        <p class="mb-2"><small>COPYRIGHT © 2021. ALL RIGHTS RESERVED.<br />
                 BETABOULDERSAPP.COM</small></p>
     </footer>
     <!-- jQuery and Bootstrap -->
